fix: use the grid to align footer [NP-1318]

--- a/scss/6-components/_footer.scss
+++ b/scss/6-components/_footer.scss
@@ -7,7 +7,7 @@
   @include cads-typographic-scale-text-small();
 
   background-color: $cads-footer__background-colour;
-  padding: $cads-spacing-4;
+  padding: $cads-spacing-4 0;
 
   .cads-footer__section-title {
     @extend %cads-h4;
